# Notepad-AIPlugin-ollama

./: CMakeLists.txt  MakeFile  NPPAIPlugin-Ollama.slnx  NPPAIPlugin-Ollama.vcxproj  NPPAIPlugin-Ollama.vcxproj.filters  README.md  notepad_aiplug.sln
bin64/: notepad_aiplug.exp  notepad_aiplug.lib
include/: PluginDefinition.h
res/: AIPanel.rc  NppPluginDemo.rc
src/: NppPluginDemo.cpp  PluginDefinition.cpp
src/AIProviders/: AIProvider.h  ClaudeProvider.cpp  ClaudeProvider.h  GeminiProvider.cpp  GeminiProvider.h  OllamaProvider.cpp  OllamaProvider.h  OpenAIProvider.cpp  OpenAIProvider.h  ProviderFactory.cpp  ProviderFactory.h
src/DockingFeature/: AIPanelDlg.cpp  AIPanelDlg.h  DiffViewDlg.cpp  DiffViewDlg.h  SettingsDlg.cpp  SettingsDlg.h  StaticDialog.cpp  StaticDialog.h  resource.h
src/Http/: HttpClient.cpp  HttpClient.h
src/Utils/: Config.cpp  Config.h
